--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Order</title>
+    <title>COFFEE Order</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 
@@ -13,7 +13,7 @@
 
     <!-- header section -->
   <header>
-      <a href="#" class="logo"><i class="fas fa-utensils"></i>Food</a>
+      <a href="#" class="logo"><i class="fa fa-coffee"></i>COFFEE-STOP</a>
       <div id="menu-bar" class="fas fa-bars"></div>
       <nav class="navbar">
           <a href="#home">Home</a>
